<resources>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_not_connected">Not Connected</string>
    <string name="drawer_server">تمام کانال ها</string>
    <string name="drawer_info">اطلاعات</string>
    <string name="drawer_tokens">Access Tokens</string>
    <string name="drawer_pinned">Pinned Channels</string>
    <string name="drawer_header_servers">سرور ها</string>
    <string name="drawer_favorites">مورد علاقه ها</string>
    <string name="drawer_lan">شبکه</string>
    <string name="drawer_public">سرور های عمومی</string>
    <string name="chat_message_tree">(Tree)</string>
    <string name="chat_message_channel">(Channel)</string>
    <string name="chat_message_to">%1$s → %2$s</string>
    <string name="chat_message_tts_short_link">(Link to %1$s)</string>
    <string name="user_menu_admin">مدیر</string>
    <string name="user_menu_kick">اخراج کردن</string>
    <string name="user_menu_ban">Ban</string>
    <string name="user_menu_mute">بی صدا</string>
    <string name="user_menu_deafen">نشنیدن</string>
    <string name="user_menu_move">Move</string>
    <string name="user_menu_priority_speaker">Priority Speaker</string>
    <string name="user_menu_local_mute">Local Mute</string>
    <string name="user_menu_ignore_messages">نادیده گرفتن پیام</string>
    <string name="user_menu_change_comment">Change Comment</string>
    <string name="user_menu_view_comment">View Comment</string>
    <string name="user_menu_reset_comment">Reset Comment</string>
    <string name="user_menu_send_message">ارسال پیام</string>
    <string name="user_menu_information">اطلاعات</string>
    <string name="user_menu_register">ثبت نام</string>
    <string name="user_menu_registered">ثبت نام شده</string>
    <string name="channel_menu_pin">Pin</string>
    <string name="comment_view">DISPLAY</string>
    <string name="comment_edit_source">EDIT SOURCE</string>
    <string name="comment_view_source">VIEW SOURCE</string>
    <string name="control_channel">کنترل کردن کانال</string>
    <string name="tcp_encryption_mode">رمزنگاری شده با AES256-SHA</string>
    <string name="voice_channel">Voice channel</string>
    <string name="udp_encryption_mode">رمزنگاری شده با OCB-AES128</string>
    <string name="audio_bandwidth">پهنای باند صدا</string>
    <string name="server_info_protocol">Protocol %s.</string>
    <string name="server_info_version">%1$s (%2$s)</string>
    <string name="server_info_latency">%.2f ms latency</string>
    <string name="server_info_host">Remote host %1$s (port %2$d)</string>
    <string name="server_info_codec">Codec: %s</string>
    <string name="server_info_max_bandwidth">Maximum %.1f kbit/s</string>
    <string name="server_info_current_bandwidth">Current %.1f kbit/s</string>
    <string name="server_match">یافتن سرور</string>
    <string name="server_match_progress">درحال یافتن سرور</string>
    <string name="server_match_found">سرور یافت شد</string>
    <string name="server_match_not_found">Couldn\'t find server</string>
    <string name="server_match_expand_country">Couldn\'t find any optimal servers in your country. Expand search worldwide?</string>
    <string name="server_match_info">Name: %1$s\nHost: %2$s:%3$d\nUsers: %4$d / %5$d\nVersion: %6$s \nCountry: %7$s \nLatency: %8$d ms</string>
    <string name="server_match_description">Plumble can automatically find you an empty server, optimizing based on the server\'s location, version, and latency.</string>
    <string name="channels">کانال ها</string>
    <string name="no_servers">No servers added.\nPress the \'add\' button on the action bar to begin.</string>
    <string name="server_add">افزودن سرور</string>
    <string name="server_password">رمزعبور</string>
    <string name="server_username">نام کاربری</string>
    <string name="server_port">پورت</string>
    <string name="server_host">آدرس</string>
    <string name="server_label">برچسب</string>
    <string name="connecting">در حال اتصال</string>
    <string name="connecting_to_server">در حال اتصال به سرور</string>
    <string name="fragment_chat">گفتگو</string>
    <string name="fragment_channel">کانال</string>
    <string name="menu_settings">تنظیمات</string>
    <string name="ptt">PUSH TO TALK</string>
    <string name="mute">بی صدا</string>
    <string name="deafen">نشنیدن</string>
    <string name="disconnect">قطع اتصال</string>
    <string name="disconnectSure">Are you sure you want to disconnect from Mumble?</string>
    <string name="save">ذخیره</string>
    <string name="add">اضافه کردن</string>
    <string name="preferences">اولویت ها</string>
    <string name="togglelocalmute">Toggle Local Mute</string>
    <string name="chat">گفتگو</string>
    <string name="perm_denied">دسترسی رد شد</string>
    <string name="connectionRefused">اتصال رد شد</string>
    <string name="confirm_delete_server">Are you sure you want to delete this server?</string>
    <string name="confirm_delete_channel">آیا از حذف این کانال اطمینان دارید؟</string>
    <string name="disconnected">قطع اتصال</string>
    <string name="kicked_message">Kicked from server.\nReason: %s</string>
    <string name="loading">درحال بارگیری</string>
    <string name="reset_key">Reset Key</string>
    <string name="externalStorageUnavailable">دسترسی به حافظه ی جانبی داده نشده است</string>
    <string name="addFavorite">اضافه کردن به مورد علاقه ها</string>
    <string name="removeFavorite">حذف کردن از لیست مورد علاقه ها</string>
    <string name="viewFavorites">مشاهده ی لیست مورد علاقه ها</string>
    <string name="favorites">مورد علاقه ها</string>
    <string name="favoriteRemoved">از لیست مورد علاقه ها حذف شد</string>
    <string name="favoriteAdded">به لیست مورد علاقه ها اضافه شد</string>
    <string name="noFavorites">هیچ کانالی در لیست مورد علاقه ها وجود ندارد.</string>
    <string name="accessTokens">Access Tokens</string>
    <string name="accessAdd">Add Access Token</string>
    <string name="pushToTalkHint">(tick checkbox to enable toggle)</string>
    <string name="messageReceived">پیام جدید</string>
    <string name="generateCert">ساخت مجوز</string>
    <string name="generateCertSuccess">Your certificate has been set and saved as %s!</string>
    <string name="generateCertFailure">خطا هنگام ساخت مجوز</string>
    <string name="generateCertProgress">در حال ساخت مجوز</string>
    <string name="search">جستجو</string>
    <string name="searchHint">جستجو میان کاربران</string>
    <string name="undocumentedWakeLock">Unfortunately, it doesn\'t look like we can provide proximity sensor wake lock support for your device. Please change the call mode to speakerphone.</string>
    <string name="bluetooth">بلوتوث</string>
    <string name="recordingVolume">Recording Volume Boost</string>
    <string name="quickConnect">اتصال سریع</string>
    <string name="connect">اتصال</string>
    <string name="connectToServer">اتصال به سرور</string>
    <string name="edit">ویرایش</string>
    <string name="remove">حذف کردن</string>
    <string name="delete">پاک کردن</string>
    <string name="retry">تلاش مجدد</string>
    <string name="messageToUser">Type message to user \'%s\'</string>
    <string name="messageToChannel">Type message to channel \'%s\' here</string>
    <string name="online">آنلاین</string>
    <string name="offline">آفلاین</string>
    <string name="clearChat">پاک کردن چت</string>
    <string name="connected">متصل</string>
    <string name="plumbleConnected">Ayandap Connected</string>
    <string name="plumbleConnecting">Ayandap Connecting</string>
    <string name="plumbleDisconnected">Ayandap Disconnected</string>
    <string name="lostConnection">Lost connection to the server.</string>
    <string name="resume">ادامه</string>
    <string name="channel">کانال</string>
    <string name="user">کاربر</string>
    <string name="server">سرور</string>
    <string name="chat_notify_moved">%1$s moved in from %2$s by %3$s.</string>
    <string name="chat_notify_muted_deafened">بی صدا و نشنیدن</string>
    <string name="chat_notify_muted">بی صدا شد</string>
    <string name="chat_notify_unmuted">Unmuted.</string>
    <string name="chat_notify_unmuted_undeafened">Unmuted and undeafened.</string>
    <string name="chat_notify_now_muted_deafened">%s is now muted and deafened.</string>
    <string name="chat_notify_now_muted">%s is now muted.</string>
    <string name="chat_notify_now_unmuted">%s is now unmuted.</string>
    <string name="chat_notify_now_unmuted_undeafened">%s is now unmuted and undeafened.</string>
    <string name="chat_notify_connected">%s connected.</string>
    <string name="chat_notify_disconnected">%s disconnected.</string>
    <string name="unknown">ناشناخته</string>
    <string name="server_list_title_favorite">مورد علاقه ها</string>
    <string name="server_list_title_lan">شبکه</string>
    <string name="server_list_title_public_internet">اینترنت</string>
    <string name="ping">پینگ</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortBy">مرتب سازی بر اساس</string>
    <string name="name">نام</string>
    <string name="country">کشور</string>
    <string name="share">اشتراک گذاری</string>
    <string name="description">توصیف</string>
    <string name="shareMessage">Join this Mumble server with Plumble! %s</string>
    <string name="noServerInfo">Ping to fetch info</string>
    <string name="status_notify_muted_and_deafened">Muted and deafened.</string>
    <string name="status_notify_muted">Muted.</string>
    <string name="comment">Comment</string>
    <string name="close">بستن</string>
    <string name="retrieving">Retrieving…</string>
    <string name="search_name">نام</string>
    <string name="search_country">کشور</string>
    <string name="preferences_immutable">This setting cannot be changed while connected to a server.</string>
    <string name="fullscreen">تمام صفحه</string>
    <string name="fullscreen_chat">گفتگو</string>
    <string name="fullscreen_channel">کانال</string>
    <string name="fetchingServers">لطفا صبر کنید ، در حال دربافت لیست سرور ها</string>
    <string name="information">اطلاعات</string>
    <string name="exit">خروج از حساب کاربری</string>
    <string name="register">خود ثبت نامی</string>
    <string name="userControl">User Control</string>
    <string name="registerSelfSuccess">ارسال درخواست ثبت نام</string>
    <string name="error_fetching_servers">Error fetching servers!\nCheck your internet connection.</string>
    <string name="coming_soon">This feature is coming soon.</string>
    <string name="search_channel_users">%d users</string>
    <string name="reconnecting">Reconnecting in %d seconds.</string>
    <string name="tapToReconnect">برای اتصال مجدد کلیک کنید</string>
    <string name="overlay">Overlay</string>
    <string name="hint_reason">دلیل</string>
    <string name="hint_ptt">Push to Talk</string>
    <string name="hint_ptt_summary">Simply press this button down to talk. Double-tap to toggle it.</string>
    <string name="hint_server_add">Welcome to Plumble</string>
    <string name="hint_server_add_summary">To begin, add a favourite server by pressing the add button on the action bar.</string>
    <string name="hint_switching">Switching Between Views</string>
    <string name="hint_switching_summary">Switch between the chat and channel views by using the buttons in the top left, or swiping.</string>
    <string name="action_settings">تنظیمات</string>
    <string name="reconnect">اتصال مجدد</string>
    <string name="reconnect_dialog_message">شما هم اکنون به سرور دیگری متصل هستید . میخواهید به این سرور متصل شوید؟</string>
    <string name="confirm_reset_comment">Are you sure you want to reset the comment of user %s?</string>
    <string name="confirm">تائید</string>
    <string name="expand">Expand</string>
    <string name="temporary">موقت</string>
    <string name="position">جایگاه</string>
    <string name="channel_edit">ویرایش کانال</string>
    <string name="channel_add">اضافه کردن کانال</string>
</resources>