<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Andrew Comminos
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="version V0.9"
            android:textColor="@color/textOnSecondary"
            android:textSize="24sp" />

        <!--<TextView-->
        <!--android:id="@+id/server_info_protocol"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="Protocol 1.2.4." />-->

        <!--<TextView-->
        <!--android:id="@+id/server_info_os_version"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="Debian GNU/Linux 7.0 (wheezy)" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/control_channel"
            android:textColor="@color/textOnSecondary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tcp_encryption_mode"
            android:textColor="@color/textOnSecondary" />

        <!--<TextView-->
        <!--android:id="@+id/server_info_tcp_latency"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="108.51 ms average latency (69.84 deviation)" />-->

        <TextView
            android:id="@+id/server_info_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Remote host Ayandap  (port 64738)"
            android:textColor="@color/textOnSecondary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/voice_channel"
            android:textColor="@color/textOnSecondary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/udp_encryption_mode"
            android:textColor="@color/textOnSecondary" />

        <!--<TextView-->
        <!--android:id="@+id/server_info_udp_latency"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="105.76 ms average latency (20.34 deviation)" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/audio_bandwidth"
            android:textColor="@color/textOnSecondary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/server_info_max_bandwidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Maximum 72.0kbit/s"
            android:textColor="@color/textOnSecondary" />

        <TextView
            android:id="@+id/server_info_current_bandwidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Current 54.8kbit/s"
            android:textColor="@color/textOnSecondary" />

        <TextView
            android:id="@+id/server_info_codec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Codec: Opus"
            android:textColor="@color/textOnSecondary" />

    </LinearLayout>
</ScrollView>
